# ffs

./: .gitignore  Cargo.toml  flake.nix
src/: db.rs  lib.rs  main.rs  splitter.rs
src/backend/: dummy.rs  mod.rs
src/db/: mod.rs  types.rs
