[package]
name = "ffs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bimap = "0.6.3"
bitflags = "2.13.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
clap = { version = "4.6.1", features = ["cargo", "derive", "env", "wrap_help"] }
compactly = { version = "0.1.6", default-features = false, features = ["v2"] }
derive_more = { version = "2.1.1", features = ["full"] }
redb = "4.1.0"
tokio = { version = "1.52.3", features = ["full"] }
